--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
     margin: 0;
     padding: 0;
 }
-/* html {
+html {
     max-height: 100vh;
     overflow-y: hidden;
-} */
+}
 
 body {
     -webkit-transition: background .4s ease;
@@ -128,7 +128,7 @@ body {
       font-size: 3rem;
       font-weight: 900;
 
-      margin-top: 10rem;
+      margin-top: 20vh;
 
       display: flex;
       flex-direction: column;
